@@ -1,3 +1,8 @@
+2009-04-16  David Kohen <dudyk at users.sourceforge.net>
+
+	* src/mp3file.c: added taglib support
+	* configure.in: added tests and include for TagLib
+
 2009-04-16  Daniele Forsi <dforsi at users.sourceforge.net>
 
 	* data/gtkpod.glade: Fix Gtk-WARNING on GtkSpinButtons
